package engine.events;

public interface IEventListener {

    public void onEvent(final Event event);
}
